Improve docs colors, fix bug

--- a/www/src/pages/index.astro
+++ b/www/src/pages/index.astro
@@ -10,7 +10,7 @@ import DefaultLayout from '../layouts/default.astro';
     <div class="illo"><IlloHome /></div>
     <section class="card w11 h3 m3">
       <h1 class="title">Design systems <small>for everyone</small></h1>
-      <Tri style="bottom: 0; right: 0; transform: rotate(180deg);" />
+      <Tri color="var(--tz-color-text-1)" style="bottom: 0; right: 0; transform: rotate(180deg);" />
     </section>
     <section class="card w13 h4 m2">
       <h3 class="subheading">Used by</h3>
