--- a/www/src/layouts/docs.astro
+++ b/www/src/layouts/docs.astro
@@ -22,7 +22,7 @@ const { frontmatter } = Astro.props;
     </script>
     <style>
       .docs {
-        --sidebar-width: calc(5 * var(--grid-size));
+        --sidebar-width: calc(5 * (var(--grid-size)));
 
         display: grid;
         grid-template-areas: "sidenav" "header-nav" "toc" "main";
@@ -68,9 +68,8 @@ const { frontmatter } = Astro.props;
 
       .content {
         background: var(--tz-color-bg-1);
-        border-inline: 1px solid var(--grid-color);
-        margin-inline: auto;
-        max-width: calc(15 * var(--grid-size));
+        margin-inline-start: calc(2 * var(--grid-size) + 1px);
+        max-width: calc(15 * var(--grid-size) - 1px);
         min-height: calc(100vh - var(--grid-size));
         padding-block-end: 6rem;
         padding-inline: var(--tz-space-600);
