--- a/www/src/styles/app.css
+++ b/www/src/styles/app.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  --grid-color: color-mix(in oklab, var(--tz-color-base-blue-600), transparent 62.5%);
+  --grid-color: color-mix(in oklab, var(--tz-color-base-blue-700), transparent 62.5%);
   --grid-size: 2.5rem;
 
   background-color: var(--tz-color-bg-1);
@@ -15,7 +15,7 @@ body {
       transparent calc(1 / 16 * 1rem)
     ),
     linear-gradient(to right, var(--grid-color), var(--grid-color) calc(1 / 16 * 1rem), transparent calc(1 / 16 * 1rem));
-  background-position: center calc(-1 / 16 * 1rem);
+  background-position: 0 calc(-1 / 16 * 1rem);
   background-repeat: repeat;
   background-size: var(--grid-size) var(--grid-size);
   color: var(--tz-color-text-1);
@@ -47,7 +47,7 @@ body {
 }
 
 ::selection {
-  background-color: var(--tz-color-base-lime-800);
+  background-color: var(--tz-color-base-lime-600);
   color: var(--tz-color-base-gray-100);
 }
 
