--- a/www/src/styles/docs.css
+++ b/www/src/styles/docs.css
@@ -102,9 +102,9 @@
   td > code {
     background-color: var(--tz-color-bg-1);
     border-color: var(--tz-color-border-2);
+    border-radius: var(--tz-radius-200);
     border-style: solid;
     border-width: 1px 1px 2.5px;
-    border-radius: var(--tz-radius-200);
     display: inline-block;
     font-size: 0.875em;
     margin-inline: 0.125em;
@@ -478,10 +478,10 @@
   }
 
   li {
-    border-width: 1px 1px 2.5px;
-    border-style: solid;
     border-color: transparent;
     border-radius: var(--tz-radius-300);
+    border-style: solid;
+    border-width: 1px 1px 2.5px;
     font-family: var(--tz-font-sans);
     font-size: var(--tz-font-body-font-size);
     list-style: none;
@@ -489,7 +489,10 @@
     overflow: hidden;
     padding: 0;
     position: relative;
-    transition: border-color 100ms linear, background-color 100ms linear, height 100ms var(--tz-ease-quint-out);
+    transition:
+      border-color 100ms linear,
+      background-color 100ms linear,
+      height 100ms var(--tz-ease-quint-out);
     will-change: height;
   }
 
@@ -503,23 +506,23 @@
     margin-bottom: -1px;
   }
 
-  > ol > li > a[aria-current]{
+  > ol > li > a[aria-current] {
     border-bottom-color: var(--tz-color-border-1);
   }
 
   > ol > li li {
-    margin-top: -1px;
+    margin-bottom: -2px;
     margin-left: -1px;
     margin-right: -1px;
-    margin-bottom: -2px;
+    margin-top: -1px;
   }
 
-  > ol > li li:has(a[aria-current]){
+  > ol > li li:has(a[aria-current]) {
     border-color: var(--tz-color-border-1);
     z-index: 2;
   }
 
-  ol{
+  ol {
     margin: 0;
     padding: 0;
 
