fix: dark mode toc bug

--- a/www/src/components/docs-sidenav.astro
+++ b/www/src/components/docs-sidenav.astro
@@ -250,7 +250,7 @@ const _NAV_ITEMS = [
     &[aria-current="page"]:hover,
     &[aria-current="page"]:focus-visible {
       .nav-link-inner {
-        border-color: var(--tz-color-border-1);
+        border-color: var(--tz-color-border-selected);
         z-index: 2;
       }
     }
