--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -22,7 +22,7 @@ const {
       : `Terrazzo: tools for token management and code generation`
   }
 </title>
-<link rel="icon" href="/favicon.svg" />
+<link rel="icon" href="/favicon.ico" />
 <link rel="canonical" href={`${Astro.site?.origin}${Astro.url.pathname}`} />
 <meta name="description" content={description} />
 <meta name="twitter:card" content="summary_large_image" />
