--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -1,8 +1,8 @@
 ---
 import { DiscordLogo, GitHubLogo } from '@terrazzo/icons';
 import SearchBox from './SearchBox.js';
-import Terrazzo from './Terrazzo.astro';
 import ThemeSwitcher from './ThemeSwitcher.js';
+import Terrazzo from './terrazzo.astro';
 ---
 
 <div class="header-nav">
