--- a/packages/plugin-css/test/fixtures/ds-apple-hig/want.css
+++ b/packages/plugin-css/test/fixtures/ds-apple-hig/want.css
@@ -29,58 +29,69 @@
   --font-style-body-font-family: var(--font-family-sf-pro);
   --font-style-body-font-size: 17px;
   --font-style-body-font-weight: 400;
-  --font-style-body-letter-spacing: 0;
   --font-style-body-line-height: 22px;
+  --font-style-body-letter-spacing: 0;
+  --font-style-body: var(--font-style-body-font-weight) var(--font-style-body-font-size)/var(--font-style-body-line-height) var(--font-style-body-font-family);
   --font-style-callout-font-family: var(--font-family-sf-pro);
   --font-style-callout-font-size: 16px;
   --font-style-callout-font-weight: 400;
-  --font-style-callout-letter-spacing: 0;
   --font-style-callout-line-height: 21px;
+  --font-style-callout-letter-spacing: 0;
+  --font-style-callout: var(--font-style-callout-font-weight) var(--font-style-callout-font-size)/var(--font-style-callout-line-height) var(--font-style-callout-font-family);
   --font-style-caption1-font-family: var(--font-family-sf-pro);
   --font-style-caption1-font-size: 12px;
   --font-style-caption1-font-weight: 400;
-  --font-style-caption1-letter-spacing: 0;
   --font-style-caption1-line-height: 16px;
+  --font-style-caption1-letter-spacing: 0;
+  --font-style-caption1: var(--font-style-caption1-font-weight) var(--font-style-caption1-font-size)/var(--font-style-caption1-line-height) var(--font-style-caption1-font-family);
   --font-style-caption2-font-family: var(--font-family-sf-pro);
   --font-style-caption2-font-size: 11px;
   --font-style-caption2-font-weight: 400;
-  --font-style-caption2-letter-spacing: 0;
   --font-style-caption2-line-height: 13px;
+  --font-style-caption2-letter-spacing: 0;
+  --font-style-caption2: var(--font-style-caption2-font-weight) var(--font-style-caption2-font-size)/var(--font-style-caption2-line-height) var(--font-style-caption2-font-family);
   --font-style-footnote-font-family: var(--font-family-sf-pro);
   --font-style-footnote-font-size: 13px;
   --font-style-footnote-font-weight: 400;
-  --font-style-footnote-letter-spacing: 0;
   --font-style-footnote-line-height: 18px;
+  --font-style-footnote-letter-spacing: 0;
+  --font-style-footnote: var(--font-style-footnote-font-weight) var(--font-style-footnote-font-size)/var(--font-style-footnote-line-height) var(--font-style-footnote-font-family);
   --font-style-headline-font-family: var(--font-family-sf-pro);
   --font-style-headline-font-size: 17px;
   --font-style-headline-font-weight: 600;
-  --font-style-headline-letter-spacing: 0;
   --font-style-headline-line-height: 22px;
+  --font-style-headline-letter-spacing: 0;
+  --font-style-headline: var(--font-style-headline-font-weight) var(--font-style-headline-font-size)/var(--font-style-headline-line-height) var(--font-style-headline-font-family);
   --font-style-large-title-font-family: var(--font-family-sf-pro);
   --font-style-large-title-font-size: 34px;
   --font-style-large-title-font-weight: 400;
-  --font-style-large-title-letter-spacing: 0;
   --font-style-large-title-line-height: 41px;
+  --font-style-large-title-letter-spacing: 0;
+  --font-style-large-title: var(--font-style-large-title-font-weight) var(--font-style-large-title-font-size)/var(--font-style-large-title-line-height) var(--font-style-large-title-font-family);
   --font-style-subhead-font-family: var(--font-family-sf-pro);
   --font-style-subhead-font-size: 15px;
   --font-style-subhead-font-weight: 400;
-  --font-style-subhead-letter-spacing: 0;
   --font-style-subhead-line-height: 20px;
+  --font-style-subhead-letter-spacing: 0;
+  --font-style-subhead: var(--font-style-subhead-font-weight) var(--font-style-subhead-font-size)/var(--font-style-subhead-line-height) var(--font-style-subhead-font-family);
   --font-style-title1-font-family: var(--font-family-sf-pro);
   --font-style-title1-font-size: 28px;
   --font-style-title1-font-weight: 400;
-  --font-style-title1-letter-spacing: 0;
   --font-style-title1-line-height: 34px;
+  --font-style-title1-letter-spacing: 0;
+  --font-style-title1: var(--font-style-title1-font-weight) var(--font-style-title1-font-size)/var(--font-style-title1-line-height) var(--font-style-title1-font-family);
   --font-style-title2-font-family: var(--font-family-sf-pro);
   --font-style-title2-font-size: 22px;
   --font-style-title2-font-weight: 400;
-  --font-style-title2-letter-spacing: 0;
   --font-style-title2-line-height: 25px;
+  --font-style-title2-letter-spacing: 0;
+  --font-style-title2: var(--font-style-title2-font-weight) var(--font-style-title2-font-size)/var(--font-style-title2-line-height) var(--font-style-title2-font-family);
   --font-style-title3-font-family: var(--font-family-sf-pro);
   --font-style-title3-font-size: 20px;
   --font-style-title3-font-weight: 400;
-  --font-style-title3-letter-spacing: 0;
   --font-style-title3-line-height: 25px;
+  --font-style-title3-letter-spacing: 0;
+  --font-style-title3: var(--font-style-title3-font-weight) var(--font-style-title3-font-size)/var(--font-style-title3-line-height) var(--font-style-title3-font-family);
 }
 
 @media (prefers-color-scheme: light) {
