--- a/packages/plugin-css/test/fixtures/ds-figma-sds/want.css
+++ b/packages/plugin-css/test/fixtures/ds-figma-sds/want.css
@@ -265,31 +265,37 @@
   --typography-body-large-font-weight: var(--typography-weight-regular);
   --typography-body-large-letter-spacing: 0;
   --typography-body-large-line-height: 1;
+  --typography-body-large: var(--typography-body-large-font-weight) var(--typography-body-large-font-size)/var(--typography-body-large-line-height) var(--typography-body-large-font-family);
   --typography-body-medium-font-family: var(--typography-family-sans);
   --typography-body-medium-font-size: var(--typography-scale-03);
   --typography-body-medium-font-weight: var(--typography-weight-regular);
   --typography-body-medium-letter-spacing: 0;
   --typography-body-medium-line-height: 1;
+  --typography-body-medium: var(--typography-body-medium-font-weight) var(--typography-body-medium-font-size)/var(--typography-body-medium-line-height) var(--typography-body-medium-font-family);
   --typography-body-small-font-family: var(--typography-family-sans);
   --typography-body-small-font-size: var(--typography-scale-02);
   --typography-body-small-font-weight: var(--typography-weight-regular);
   --typography-body-small-letter-spacing: 0;
   --typography-body-small-line-height: 1;
+  --typography-body-small: var(--typography-body-small-font-weight) var(--typography-body-small-font-size)/var(--typography-body-small-line-height) var(--typography-body-small-font-family);
   --typography-code-large-font-family: var(--typography-family-mono);
   --typography-code-large-font-size: var(--typography-scale-04);
   --typography-code-large-font-weight: var(--typography-weight-regular);
   --typography-code-large-letter-spacing: 0;
   --typography-code-large-line-height: 1;
+  --typography-code-large: var(--typography-code-large-font-weight) var(--typography-code-large-font-size)/var(--typography-code-large-line-height) var(--typography-code-large-font-family);
   --typography-code-medium-font-family: var(--typography-family-mono);
   --typography-code-medium-font-size: var(--typography-scale-03);
   --typography-code-medium-font-weight: var(--typography-weight-regular);
   --typography-code-medium-letter-spacing: 0;
   --typography-code-medium-line-height: 1;
+  --typography-code-medium: var(--typography-code-medium-font-weight) var(--typography-code-medium-font-size)/var(--typography-code-medium-line-height) var(--typography-code-medium-font-family);
   --typography-code-small-font-family: var(--typography-family-mono);
   --typography-code-small-font-size: var(--typography-scale-02);
   --typography-code-small-font-weight: var(--typography-weight-regular);
   --typography-code-small-letter-spacing: 0;
   --typography-code-small-line-height: 1;
+  --typography-code-small: var(--typography-code-small-font-weight) var(--typography-code-small-font-size)/var(--typography-code-small-line-height) var(--typography-code-small-font-family);
   --typography-family-mono: "roboto mono", monospace;
   --typography-family-sans: inter, sans-serif;
   --typography-family-serif: "noto serif", serif;
@@ -298,16 +304,19 @@
   --typography-heading-base-font-weight: var(--typography-weight-semibold);
   --typography-heading-base-letter-spacing: 0;
   --typography-heading-base-line-height: 1;
+  --typography-heading-base: var(--typography-heading-base-font-weight) var(--typography-heading-base-font-size)/var(--typography-heading-base-line-height) var(--typography-heading-base-font-family);
   --typography-heading-large-font-family: var(--typography-family-sans);
   --typography-heading-large-font-size: var(--typography-scale-06);
   --typography-heading-large-font-weight: var(--typography-weight-semibold);
   --typography-heading-large-letter-spacing: 0;
   --typography-heading-large-line-height: 1;
+  --typography-heading-large: var(--typography-heading-large-font-weight) var(--typography-heading-large-font-size)/var(--typography-heading-large-line-height) var(--typography-heading-large-font-family);
   --typography-heading-small-font-family: var(--typography-family-sans);
   --typography-heading-small-font-size: var(--typography-scale-04);
   --typography-heading-small-font-weight: var(--typography-weight-semibold);
   --typography-heading-small-letter-spacing: 0;
   --typography-heading-small-line-height: 1;
+  --typography-heading-small: var(--typography-heading-small-font-weight) var(--typography-heading-small-font-size)/var(--typography-heading-small-line-height) var(--typography-heading-small-font-family);
   --typography-scale-01: 0.75rem;
   --typography-scale-02: 0.875rem;
   --typography-scale-03: 1rem;
@@ -323,51 +332,61 @@
   --typography-subheading-base-font-weight: var(--typography-weight-regular);
   --typography-subheading-base-letter-spacing: 0;
   --typography-subheading-base-line-height: 1;
+  --typography-subheading-base: var(--typography-subheading-base-font-weight) var(--typography-subheading-base-font-size)/var(--typography-subheading-base-line-height) var(--typography-subheading-base-font-family);
   --typography-subheading-large-font-family: var(--typography-family-sans);
   --typography-subheading-large-font-size: var(--typography-scale-05);
   --typography-subheading-large-font-weight: var(--typography-weight-regular);
   --typography-subheading-large-letter-spacing: 0;
   --typography-subheading-large-line-height: 1;
+  --typography-subheading-large: var(--typography-subheading-large-font-weight) var(--typography-subheading-large-font-size)/var(--typography-subheading-large-line-height) var(--typography-subheading-large-font-family);
   --typography-subheading-small-font-family: var(--typography-family-sans);
   --typography-subheading-small-font-size: var(--typography-scale-03);
   --typography-subheading-small-font-weight: var(--typography-weight-regular);
   --typography-subheading-small-letter-spacing: 0;
   --typography-subheading-small-line-height: 1;
+  --typography-subheading-small: var(--typography-subheading-small-font-weight) var(--typography-subheading-small-font-size)/var(--typography-subheading-small-line-height) var(--typography-subheading-small-font-family);
   --typography-subtitle-base-font-family: var(--typography-family-sans);
   --typography-subtitle-base-font-size: var(--typography-scale-06);
   --typography-subtitle-base-font-weight: var(--typography-weight-regular);
   --typography-subtitle-base-letter-spacing: 0;
   --typography-subtitle-base-line-height: 1;
+  --typography-subtitle-base: var(--typography-subtitle-base-font-weight) var(--typography-subtitle-base-font-size)/var(--typography-subtitle-base-line-height) var(--typography-subtitle-base-font-family);
   --typography-subtitle-large-font-family: var(--typography-family-sans);
   --typography-subtitle-large-font-size: var(--typography-scale-07);
   --typography-subtitle-large-font-weight: var(--typography-weight-regular);
   --typography-subtitle-large-letter-spacing: 0;
   --typography-subtitle-large-line-height: 1;
+  --typography-subtitle-large: var(--typography-subtitle-large-font-weight) var(--typography-subtitle-large-font-size)/var(--typography-subtitle-large-line-height) var(--typography-subtitle-large-font-family);
   --typography-subtitle-small-font-family: var(--typography-family-sans);
   --typography-subtitle-small-font-size: var(--typography-scale-05);
   --typography-subtitle-small-font-weight: var(--typography-weight-regular);
   --typography-subtitle-small-letter-spacing: 0;
   --typography-subtitle-small-line-height: 1;
+  --typography-subtitle-small: var(--typography-subtitle-small-font-weight) var(--typography-subtitle-small-font-size)/var(--typography-subtitle-small-line-height) var(--typography-subtitle-small-font-family);
   --typography-title-hero-font-family: var(--typography-family-sans);
   --typography-title-hero-font-size: var(--typography-scale-10);
   --typography-title-hero-font-weight: var(--typography-weight-bold);
   --typography-title-hero-letter-spacing: 0;
   --typography-title-hero-line-height: 1;
+  --typography-title-hero: var(--typography-title-hero-font-weight) var(--typography-title-hero-font-size)/var(--typography-title-hero-line-height) var(--typography-title-hero-font-family);
   --typography-title-page-base-font-family: var(--typography-family-sans);
   --typography-title-page-base-font-size: var(--typography-scale-08);
   --typography-title-page-base-font-weight: var(--typography-weight-bold);
   --typography-title-page-base-letter-spacing: 0;
   --typography-title-page-base-line-height: 1;
+  --typography-title-page-base: var(--typography-title-page-base-font-weight) var(--typography-title-page-base-font-size)/var(--typography-title-page-base-line-height) var(--typography-title-page-base-font-family);
   --typography-title-page-large-font-family: var(--typography-family-sans);
   --typography-title-page-large-font-size: var(--typography-scale-09);
   --typography-title-page-large-font-weight: var(--typography-weight-bold);
   --typography-title-page-large-letter-spacing: 0;
   --typography-title-page-large-line-height: 1;
+  --typography-title-page-large: var(--typography-title-page-large-font-weight) var(--typography-title-page-large-font-size)/var(--typography-title-page-large-line-height) var(--typography-title-page-large-font-family);
   --typography-title-page-small-font-family: var(--typography-family-sans);
   --typography-title-page-small-font-size: var(--typography-scale-07);
   --typography-title-page-small-font-weight: var(--typography-weight-bold);
   --typography-title-page-small-letter-spacing: 0;
   --typography-title-page-small-line-height: 1;
+  --typography-title-page-small: var(--typography-title-page-small-font-weight) var(--typography-title-page-small-font-size)/var(--typography-title-page-small-line-height) var(--typography-title-page-small-font-family);
   --typography-weight-black: 900;
   --typography-weight-bold: 700;
   --typography-weight-extrabold: 800;
